<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:cnb_iconColor="@color/black" />
    <item
        android:id="@+id/search_menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:cnb_iconColor="@color/black" />
    <item
        android:id="@+id/bookmark_menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/bookmark"
        app:cnb_iconColor="@color/black" />
</menu>